# japanese-image-to-text-webapp

./: .flake8  .gitignore  DockerFile  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  logger.py  settings.py
src/text_extractor/: app.py  constants.py
src/text_extractor/output/: recognized.txt
src/web_app/: app.py  utils.py
src/web_app/static/: scripts.js  styles.css
src/web_app/templates/: index.html
tests/: test_text_extractor.py  test_web_app.py
